# capnabom

abom/: Cargo.toml
abom/src/: main.rs
capn/: Cargo.toml
capn/schema/: foo.capnp
capn/src/: main.rs
